# ConeSTELLATION

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  README.md  debug_log.md  package.xml
config/: CLAUDE.md  cone_slam.rviz  dummy_publisher_config.yaml  slam_config.yaml
docs/: CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  SLAM_ARCHITECTURE.md  architecture_decision_odometry_slam.md  archived_slam_issues_analysis.md  current_system_status.md  debug_log.md  debugging_strategy.md  fix_1_enable_interlandmark.md  fix_2_track_id_association.md  fix_3_interlandmark_crash.md  fix_4_track_id_crash.md  fix_5_conemapping_promotion.md  fix_6_conemapping_stability.md  future_development_todo.md  glim_features_integration.md  input_topic_structure.md  inter_landmark_implementation.md  slam_issues_todolist.md  topic_structure.md
include/: CLAUDE.md
include/cone_stellation/common/: cone.hpp  estimation_frame.hpp  tentative_landmark.hpp
include/cone_stellation/factors/: cone_observation_factor.hpp  inter_landmark_factors.hpp
include/cone_stellation/mapping/: cone_mapping.hpp  cone_mapping_safe.hpp  data_association.hpp  simple_cone_mapping.hpp
include/cone_stellation/odometry/: CLAUDE.md  async_cone_odometry.hpp  cone_odometry_2d.hpp  cone_odometry_base.hpp
include/cone_stellation/preprocessing/: cone_preprocessor.hpp
include/cone_stellation/util/: drift_correction_manager.hpp  ros_utils.hpp
include/cone_stellation/viewer/: cone_viewer.hpp  optimization_viewer.hpp  pose_viewer.hpp  slam_visualizer.hpp  slam_visualizer_improved.hpp  track_viewer.hpp  viewer_base.hpp  viewer_manager.hpp  visualization_utils.hpp
launch/: CLAUDE.md  cone_slam_launch.py  dummy_publisher_launch.py  test_slam_launch.py
scripts/: CLAUDE.md  __init__.py  check_topics.py  dummy_publisher_node.py  motion_controller.py  sensor_simulator.py  test_dummy_publisher.py  test_inter_landmark.sh  test_slam_only.py
src/: CLAUDE.md
src/cone_stellation/factors/: inter_landmark_factors.cpp
src/cone_stellation/preprocessing/: cone_preprocessor.cpp
src/cone_stellation/ros/: cone_slam_node.cpp
src/cone_stellation/visualization/: visualization_utils.py
test/: CLAUDE.md  test_inter_landmark_factors.cpp
